# qtick-svc

./: .env.example  .gitignore  README.md  fix_agent.py  pyproject.toml  requirements.txt  sync_test.txt  verify_phone_refactor.py  verify_tools_output.py
app/: agent.py  config.py  main.py  mcp_server.py  models.py  website_agent.py
app/services/: base.py  java_service.py  mock_service.py  rag_service.py
app/tools/: appointments.py  business.py  catalog.py  help.py  invoices.py  leads.py  offers.py  website_tools.py
app/utils/: date_utils.py  mappings.py
data/: phone_mappings.json  qtick_info.txt
tests/: test_agent_prompts.py  test_business_lookup.py  test_business_summary_output.py  test_create_appt_wa.py  test_date_parsing.py  test_date_ranges.py  test_flow.py  test_franchise_summary.py  test_gemini_connection.py  test_gemini_multiturn.py  test_help_guide_manual.py  test_java_api_prompts.py  test_lead_value.py  test_leads_enq_for.py  test_list_appointments.py  test_offers_tool.py  test_phone_chat.py  test_website_chat.py
